Quorum3/Library/Tests/IfStatement/Pass/IfStatementOneCondition_VarEqual_False.quorum
class Main
    action Main
        boolean result = false

        if result = true
            result = true
        end
        
        output result
    end
end